# OpenNURBS

./: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/src/: opennurbs_precompiledheader.cpp
sdk/zlib/: CMakeLists.txt
